# Final-Year-Project

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml
aegiscore/: .env.example  README.md  pyproject.toml  requirements.txt  sample_honeypot.json  sample_malware.json  sample_network.json  sample_posture.json
aegiscore/configs/: feature_schema.yaml  model_config.yaml
aegiscore/data/models/: honeypot_baseline.joblib  honeypot_label_encoder.joblib  honeypot_model.joblib  malware_baseline.joblib  malware_label_encoder.joblib  malware_model.joblib  network_supervised_label_encoder.joblib  network_supervised_model.joblib  network_unsupervised_model.joblib  posture_label_encoder.joblib  posture_model.joblib
aegiscore/data/reports/: honeypot_training_report.json  malware_training_report.json  network_training_report.json  posture_training_report.json
aegiscore/data/synthetic/: honeypot_synthetic.csv  malware_synthetic.csv  network_synthetic.csv  posture_synthetic.csv
aegiscore/notebooks/: 01_honeypot_exploration.ipynb  02_malware_triage.ipynb  03_network_anomaly.ipynb  04_misconfig_risk.ipynb
aegiscore/src/: __init__.py  cli.py  main.py
aegiscore/src/common/: __init__.py  io.py  logger.py  metrics.py  schemas.py  utils.py
aegiscore/src/data_generation/: __init__.py  honeypot_synth.py  malware_synth.py  network_synth.py  posture_synth.py
aegiscore/src/evaluation/: __init__.py  plots.py  reports.py
aegiscore/src/explainability/: __init__.py  explanation_engine.py  feature_importance.py
aegiscore/src/inference/: __init__.py  predict_honeypot.py  (+3 more)
(+25 files in other folders)
